include $(top_srcdir)/src/Common.am
include $(top_srcdir)/src/TestHeaders.am

noinst_LIBRARIES = libntlmauth.a

libntlmauth_a_SOURCES = \
	ntlmauth.cc \
	ntlmauth.h \
	rfcnb.h \
	rfcnb-io.c \
	rfcnb-priv.h \
	rfcnb-session.c \
	rfcnb-util.c \
	smb-byteorder.h \
	smb-des.c \
	smb-des.h \
	smb-encrypt.c \
	smb.h \
	smblib.c \
	smblib-priv.h \
	smblib-util.c \
	smblmauth.c \
	smblmauth.h \
	smb-md4.c \
	smb-md4.h \
	support_bits.cci
