EXTRA_DIST	= AnnounceCache.pl access-log-matrix.pl cache-compare.pl \
		cachetrace.pl check_cache.pl convert.configure.to.os2 \
		fileno-to-pathname.pl flag_truncs.pl icp-test.pl \
		find-alive.pl trace-job.pl trace-master.pl \
		icpserver.pl tcp-banger.pl udp-banger.pl upgrade-1.0-store.pl \
		calc-must-ids.pl calc-must-ids.sh

dist_noinst_SCRIPTS = remove-cfg.sh
